--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "pyyaml>=6.0",
     "pydantic>=2.0.0",
     "jinja2>=3.0.0",
+    "platformdirs>=4.0.0",
 ]
 
 [project.optional-dependencies]
